# ostest-demo

./: README.md
demos/files/: fd  fd.c  fsize  fsize.c  script_fd  script_fsize
demos/fork/: fork  fork.c  script
demos/fork/affinity/: affinity.c  app
demos/limiter/: limiter  limiter.c
demos/mem_limit/: mem  mem.c  script
demos/signal/: app  app.c  signals  signalsspam
gantt/: sem1.gan  sem2.gan
test_executor_c/: CMakeLists.txt  README.md  cgroup_stuff.c  cgroup_stuff.h  do_stuff_in_child.c  do_stuff_in_child.h  global_helpers.c  global_helpers.h  main.c  mount_namespace_stuff.c  mount_namespace_stuff.h  namespace_stuff.c  namespace_stuff.h  observe_child.c  observe_child.h  strace_observe_stuff.c  strace_observe_stuff.h  uut.c
test_executor_c/uut/: uut.c  uut2.c
